[package]
name = "picosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wait-for-serial = []

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
fugit = "0.3"
rp-pico = "0.7"
rp2040-boot2 = "0.3"
rp2040-hal = "0.8"
rp2040-pac = "0.4"
usb-device = "0.2"
usbd-hid = "0.8"
usbd-serial = "0.1"
log = "0.4"
display-interface = "0.5"
display-interface-spi = "0.4"
embedded-graphics = "0.8"
st7789 = "0.7"
oorandom = "11.1"
heapless = "0.7"
picosystem_compressor = { path = "../compressor" }

[dev-dependencies]
picosystem_macros = { path = "../picosystem_macros" }
