cargo-features = ["edition2021"]

[package]
name = "picosystem_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
crate-type = ["proc-macro"]

[dependencies]
log = "0.4"
image = "0.25"
structopt = "0.3"
rustfmt-wrapper = "0.2"
glob = "0.3"
syn = "1.0" # keep this at 1.0.x
picosystem_compressor = { path = "../compressor" }
# picosystem = { path = "../picosystem" }
tiled = "0.13"
